--- a/frontend-angular-app/package.json
+++ b/frontend-angular-app/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~11.2.7",
     "@angular/router": "~11.2.7",
     "bootstrap": "^5.0.1",
+    "express": "^4.17.1",
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
