--- a/frontend-angular-app/package.json
+++ b/frontend-angular-app/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~11.2.7",
     "@angular/platform-browser-dynamic": "~11.2.7",
     "@angular/router": "~11.2.7",
+    "angular-web-storage": "^10.0.0",
     "bootstrap": "^5.0.1",
     "express": "^4.17.1",
     "jquery": "^3.6.0",
